新增满意度评价
新增满意度评价、帮助中心支持文档全文搜索。

--- a/kf5sdk-master-v2/app/src/main/res/values/strings.xml
+++ b/kf5sdk-master-v2/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="feed_back">提交反馈</string>
     <string name="look_feed_back">查看反馈</string>
     <string name="chat">即时交谈</string>
+    <string name="setting">设置</string>
 </resources>
