--- a/kf5sdk-master-v2/app/src/main/res/values/strings.xml
+++ b/kf5sdk-master-v2/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="look_feed_back">查看反馈</string>
     <string name="chat">即时交谈</string>
     <string name="setting">设置</string>
+    <string name="language_setting">语言设置</string>
+    <string name="chinese">中文</string>
+    <string name="english">英语</string>
 </resources>
