--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
@@ -134,4 +134,5 @@
     <string name="kf5_reminder">Reminder</string>
     <string name="kf5_unknown_error">unknown error</string>
     <string name="kf5_invite_video_chat">The agent invite you into the video conferencing</string>
+    <string name="kf5_robot_found_answers">has found following answers for you:</string>
 </resources>
