新增机器人关闭状态先发送消息后排队的设置,修复部分bug

--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values/strings.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values/strings.xml
@@ -130,4 +130,5 @@
     <string name="kf5_invite_video_chat">客服邀请您进行视频聊天</string>
     <string name="kf5_robot_found_answers">为您找到以下内容:</string>
     <string name="kf5_update_queue">您已进入排队;</string>
+    <string name="kf5_chat">聊天</string>
 </resources>
