--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
@@ -136,4 +136,5 @@
     <string name="kf5_invite_video_chat">The agent invite you into the video conferencing</string>
     <string name="kf5_robot_found_answers">has found following answers for you:</string>
     <string name="kf5_update_queue">Queueing to be served;</string>
+    <string name="kf5_chat">Chat</string>
 </resources>
