新增支持IM服务时间,优化代码,修复部分bug

--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
@@ -137,4 +137,8 @@
     <string name="kf5_robot_found_answers">has found following answers for you:</string>
     <string name="kf5_update_queue">Queueing to be served;</string>
     <string name="kf5_chat">Chat</string>
+    <string name="kf5_not_in_service_time">Not in the service time,leave a message instead</string>
+    <string name="kf5_queue_error_leave_msg">Queue failure,leave a message instead</string>
+    <string name="kf5_queue_too_long">Service is busy now,leave a message instead</string>
+    <string name="kf5_queue_error">Queue failure</string>
 </resources>
