新增IM同步客服头像功能

--- a/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
+++ b/kf5sdk-master-v2/kf5sdkModule/src/main/res/values-en/strings.xml
@@ -59,10 +59,10 @@
     <string name="kf5_rate">Rating</string>
     <string-array name="kf5_rating_status">
         <item>Bad</item>
-        <item>Soso</item>
+        <item>So so</item>
         <item>OK</item>
-        <item>Good</item>
-        <item>Great</item>
+        <item>Very good</item>
+        <item>Excellent</item>
     </string-array>
 
 
