--- a/kf5sdkModule/src/main/res/values-en/strings.xml
+++ b/kf5sdkModule/src/main/res/values-en/strings.xml
@@ -24,7 +24,7 @@
     <string name="kf5_action_done">Done</string>
     <string name="kf5_photo_all">All photos</string>
     <string name="kf5_no_camera_hint">No camera</string>
-    <string name="kf5_photo_amount_limit_hint">Maxmum photo limit exceed %1$s</string>
+    <string name="kf5_photo_amount_limit_hint">Maximum photo limit exceed %1$s</string>
     <string name="kf5_photo_unit"></string>
     <string name="kf5_action_select_photo">Choose photo</string>
 
@@ -165,4 +165,5 @@
     <string name="kf5_queue_too_long">Service is busy now,leave a message instead</string>
     <string name="kf5_queue_error">Queue failure</string>
     <string name="kf5_select_question">Select question</string>
+    <string name="kf5_message_recalled">Agent recalled a message</string>
 </resources>
